--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,7 @@ name = "pypi"
 [packages]
 langchain = "==0.3.27"
 langchain-openai = "==0.3.32"
+langgraph = "==0.6.6"
 python-dotenv = "==1.1.1"
 
 [dev-packages]
