--- a/.env.example
+++ b/.env.example
@@ -12,11 +12,19 @@ EMBEDDING_BASE_URL=https://api.openai.com/v1
 EMBEDDING_MODEL=text-embedding-ada-002
 EMBEDDING_DIMENSIONS=1536
 
-# Model Temperature Constraints (optional)
+# Search Configuration (optional)
+TAVILY_API_KEY=your_tavily_api_key_here
+SEARCH_TIMEOUT=6
+SEARCH_RETRIES=2
+SEARCH_CACHE_TTL=300
+
+# Production Configuration
+LOG_LEVEL=WARNING
 MODEL_TEMPERATURE_MIN=0.0
 MODEL_TEMPERATURE_MAX=2.0
 
 # Instructions:
 # 1. Copy this file to .env
 # 2. Replace placeholder values with your actual API keys and configuration
-# 3. The .env file is automatically ignored by git for security
+# 3. For production, keep LOG_LEVEL=WARNING or ERROR to minimize log output
+# 4. The .env file is automatically ignored by git for security
